crates/pcb-zen/tests/snapshots/assert__snapshot_error_function_should_error.snap
---
source: crates/pcb-zen/tests/assert.rs
expression: snapshot_output
---
Error: boom
   ╭─[ [TEMP_DIR]test.zen:2:1 ]
   │
 2 │ error("boom")
   │ ──────┬──────  
   │       ╰──────── boom
───╯
